<resources>
    <string name="app_name">My Application</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string-array name="types">
        <item>生活</item>
        <item>健康</item>
        <item>历史</item>
        <item>物理学</item>
        <item>音乐</item>
        <item>自然科学</item>
    </string-array>
    <!--zjw-->
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="hint_account">请输入您的用户名</string>
    <string name="hint_pwd">请输入您的密码</string>
    <string name="hint_repwd">请再次输入密码</string>
    <string name="remenber_pwd">记住密码</string>
    <string name="login_uoto">自动登录</string>

    <string name="account">用户名</string>
    <string name="pwd">密码</string>
    <string name="repwd">确认</string>
    <string name="hobby">爱好</string>
    <string name="hint_hobby">请输入您的爱好</string>
    <string name="hooby">兴趣</string>
    <string name="charact">性格</string>
    <string name="hint_charact">请输入您的性格特征</string>
    <string name="submint">确定</string>
    <string name="cancle">取消</string>
    <string name="admin">管理员登录>>></string>

    <!--zxf-->
    <string name="infor_back">返回</string>
    <string name="information">个人信息</string>
    <string name="infor_save">保存</string>
    <string name="infor_username">用户名</string>
    <string name="infor_sex">性别:</string>
    <string name="infor_sex_man">男</string>
    <string name="infor_sex_woman">女</string>
    <string name="infor_birth">出生年月:</string>
    <string name="infor_email">电子邮箱:</string>
    <string name="infor_phone">手机:</string>
    <string name="infor_hobbyone">兴趣1:</string>
    <string name="infor_hobbytwo">兴趣2:</string>
    <string name="infor_hobbythree">兴趣3:</string>
    <string name="infor_personality">性格特征:</string>
    <string name="my_login">登录注册</string>
    <string name="my_mypost">我的帖子</string>
    <string name="my_help">反馈帮助中心</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_setting">设置</string>
    <string name="look_alter">修改</string>
</resources>
