<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/defaultlogo1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <TextView
                    android:id="@+id/account"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/account"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/register_edit_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_account" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <TextView
                    android:id="@+id/pwd"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pwd"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/register_edit_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_pwd"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <TextView
                    android:id="@+id/repwd"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/repwd"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/register_edit_repwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_repwd"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <TextView
                    android:id="@+id/hobby"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hooby"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/register_edit_hobby"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_hobby" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <TextView
                    android:id="@+id/chract"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/charact"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/register_edit_charact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_charact" />
            </LinearLayout>

            <requestFocus />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <Button
                    android:id="@+id/register_btn_submint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button3"
                    android:text="@string/submint" />

                <Button
                    android:id="@+id/register_btn_cancle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button3"
                    android:text="@string/cancle" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>