<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/defaultlogo1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_logo"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
           
            android:drawableLeft="@android:drawable/ic_menu_myplaces"
            android:hint="@string/hint_account"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_account"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_edit_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
            android:ems="10"
            android:hint="@string/hint_pwd"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_remenber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_pwd"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/Login_check_Remember"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/remenber_pwd"
            android:textSize="15dp" />

        <CheckBox
            android:id="@+id/Login_check_auto"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:checked="false"
            android:text="@string/login_uoto"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_remenber"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <Button
            android:id="@+id/login_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_btn_login"
            android:layout_marginTop="10dp"
            android:background="@drawable/button2"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:orientation="vertical" >

        <Button
            android:id="@+id/adminlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:text="@string/admin"
            android:textColor="#7EC0EE" />
    </LinearLayout>

</RelativeLayout>