<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

   <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:background="@drawable/blue"
         >

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/my_login"
            android:textColor="@color/pink"
            android:textSize="22sp"
            android:background="@drawable/blue"
            android:onClick="login"
            />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:background="@drawable/acm_inputbox"
         >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/add_contacts_look_for_similarity" />


                <Button
            android:id="@+id/information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/information"
            android:textColor="#000"
            android:textSize="20sp"
            android:background="@color/white"
            android:onClick="information"
            />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:background="@drawable/acm_inputbox" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/conversation_options_share_photo" />

        <TextView
            android:id="@+id/mypost"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:text="@string/my_mypost"
            android:textColor="#000"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true"
        android:background="@drawable/acm_inputbox" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/qq_setting_shoucang" />

        <TextView
            android:id="@+id/collect"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:text="@string/my_collect"
            android:textColor="#000"
            android:textSize="20sp" />
    </LinearLayout>
<LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout4"
        android:background="@drawable/acm_inputbox" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/qq_contact_list_phone_enter_icon" />

        <TextView
            android:id="@+id/help"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:text="@string/my_help"
            android:textColor="#000"
            android:textSize="20sp" />
    </LinearLayout>
    

    <LinearLayout
    android:id="@+id/linearLayout6"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/linearLayout5"
    android:background="@drawable/acm_inputbox" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/qq_setting_setting" />

    <TextView
        android:id="@+id/setting"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:text="@string/my_setting"
        android:textColor="#000"
        android:textSize="20sp" />
</LinearLayout>
    



</RelativeLayout>